2011-10-03  David Levin  <levin@chromium.org>

        watchlist: Allow specified a bug to attach the watchlist info to.
        https://bugs.webkit.org/show_bug.cgi?id=69288

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/tool/commands/applywatchlistlocal.py: Add support for bugid.
        * Scripts/webkitpy/tool/commands/applywatchlistlocal_unittest.py:
        Add tests and fix an existing test because the unit tests do not go through the
        normal command line processing (so the -g argument remained when we determined bug ids).
        * Scripts/webkitpy/tool/commands/commandtest.py: Change the derivation to
        get the assert raises regex method.
        * Scripts/webkitpy/tool/commands/download.py: Fix the command help to be more unixy.

2011-10-03  Leandro Pereira  <leandro@profusion.mobi>

        [EFL] DRT: Add JSStringUtils.{cpp,h}
        https://bugs.webkit.org/show_bug.cgi?id=66397

        Reviewed by Ryosuke Niwa.
        
        Adds helper functions to compare the equality of C-style strings and
        JSStringRef objects.

        * DumpRenderTree/efl/JSStringUtils.cpp: Added.
        (equals):
        * DumpRenderTree/efl/JSStringUtils.h: Added.

2011-10-03  Adam Barth  <abarth@webkit.org>

        garden-o-matic should work in Safari 5.1
        https://bugs.webkit.org/show_bug.cgi?id=69290

        Reviewed by Sam Weinig.

        My old implementation of bind was too clever by half.  This one seems
        to work better, at least according to this test.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base_unittests.js:

2011-09-29  Ademar de Souza Reis Jr.  <ademar.reis@openbossa.org>

        Unreviewed: change my e-mail in commiters.py

        (I'm leaving the company and my @openbossa.org will be no more)

        * Scripts/webkitpy/common/config/committers.py:
