@@ -1,5 +1,17 @@
 2011-10-03  David Levin  <levin@chromium.org>
 
+        watchlist: Make watchlist run on a bot.
+        https://bugs.webkit.org/show_bug.cgi?id=68974
+
+        Reviewed by Adam Barth.
+
+        * Scripts/webkitpy/tool/commands/queues.py: Add the watchlist to the style bot.
+        * Scripts/webkitpy/tool/commands/queues_unittest.py:
+        Change to log what is run so that we can see the style command
+        and the watchlist command being run.
+
+2011-10-03  David Levin  <levin@chromium.org>
+
         watchlist: Allow specified a bug to attach the watchlist info to.
         https://bugs.webkit.org/show_bug.cgi?id=69288
 
